objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMS_for_parents__c</fullName>
        <label>SMS for parents</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_of_Teacher__c</fullName>
        <label>Email of Teacher</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marks_Percentage__c</fullName>
        <label>Marks Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>